Adden config files and init file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
  *.iml
- .idea/
+/.idea/
  /out/
  /build/
+/src/main/resources/databaseproperties.properties
 
 # Compiled class file
 *.class
@@ -25,3 +26,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
