--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.hp.hpl.jena</groupId>
+            <artifactId>arq</artifactId>
+            <version>2.8.3</version>
+        </dependency>
     </dependencies>
 
 </project>
